added create functionality

--- a/main.css
+++ b/main.css
@@ -1,6 +1,17 @@
+/* Refactor this */
+
+
+
+
 .cat {
   background-color: lightblue;
   margin: 0;
+}
+
+#cats {
+  background-color: lightblue;
+  color: black;
+  border: 1px solid black;
 }
 
 .dino {
@@ -8,9 +19,21 @@
   margin: 0;
 }
 
+#dinos {
+  background-color: yellow;
+  color: black;
+  border: 1px solid black;
+}
+
 .dog {
   background-color: green;
   margin: 0;
+  color: white;
+}
+
+#dogs {
+  background-color: green;
+  border: 1px solid black;
 }
 
 
@@ -42,5 +65,19 @@
 }
 
 .btn {
-  margin: 5px 10px;
+  margin: 5px 15px;
+}
+
+form {
+  margin: 20px;
+}
+
+.form-select {
+  margin-bottom: 15px;
+  height: 58px;
+}
+
+.card-img-top {
+  max-width: 300px;
+  align-self: center;
 }
